--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Davey Tree Coding Challenge</title>
+    <title>DT Coding Challenge</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style.css">
+    <h1>Title</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.js"></script>
+
+    <script type="text/javascript" src="table.js"></script>
     <script type="text/javascript" src="app.js"></script>
+
   </head>
-  <body ng-app="app"></body>
+  <body ng-app="app">
+      <div ng-view></div>
+  </body>
 </html>
