--- a/client/index.html
+++ b/client/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <title>DT Coding Challenge</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <h1>Title</h1>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.js"></script>
 
-    <script type="text/javascript" src="table.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <link rel="stylesheet" href="http://ui-grid.info/release/ui-grid.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
 
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-route.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-touch.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-animate.js"></script>
+    <script src="http://ui-grid.info/docs/grunt-scripts/csv.js"></script>
+    <script src="http://ui-grid.info/docs/grunt-scripts/pdfmake.js"></script>
+    <script src="http://ui-grid.info/docs/grunt-scripts/vfs_fonts.js"></script>
+    <script src="http://ui-grid.info/release/ui-grid.js"></script>
   </head>
+
   <body ng-app="app">
-      <div ng-view></div>
+
+    <h1>Tree Inventory</h1>
+    <div ng-view></div>
+
+    <script src="app.js"></script>
+    <script src="table.js"></script>
   </body>
 </html>
