--- a/client/table.html
+++ b/client/table.html
@@ -1,3 +1,4 @@
 <div>
-  <div ui-grid="{ data: treeData }" class="myGrid"></div>
+  <div ui-grid="treeTable" ui-grid-edit ui-grid-cellnav class="treeTable"></div>
+  <p>Note: This table is for illustration purposes only. Edits will not persist after reloading.</p>
 </div>
