--- a/client/table.html
+++ b/client/table.html
@@ -1,4 +1,4 @@
 <div>
-  <div ui-grid="treeTable" ui-grid-edit ui-grid-cellnav class="treeTable"></div>
+  <div ui-grid="treeTable" ui-grid-edit ui-grid-cellnav ui-grid-selection ui-grid-exporter class="treeTable"></div>
   <p>Note: This table is for illustration purposes only. Edits will not persist after reloading.</p>
 </div>
