inject & link to factory

--- a/client/index.html
+++ b/client/index.html
@@ -15,14 +15,18 @@
     <script src="http://ui-grid.info/docs/grunt-scripts/pdfmake.js"></script>
     <script src="http://ui-grid.info/docs/grunt-scripts/vfs_fonts.js"></script>
     <script src="http://ui-grid.info/release/ui-grid.js"></script>
+
   </head>
 
   <body ng-app="app">
 
-    <h1>Tree Inventory</h1>
-    <div ng-view></div>
-
+    <div class="centerCol">
+      <h1>Tree Inventory</h1>
+      <div ng-view></div>
+    </div>
     <script src="app.js"></script>
     <script src="table.js"></script>
+    <script src="factory.js"></script>
+
   </body>
 </html>
