--- a/client/table.html
+++ b/client/table.html
@@ -1,4 +1,5 @@
 <div>
   <div ui-grid="treeTable" ui-grid-edit ui-grid-cellnav ui-grid-selection ui-grid-exporter ui-grid-validate class="treeTable"></div>
   <p>Note: This table is for illustration purposes only. Edits will not persist after reloading.</p>
+  <button>Show Duplicate Site Numbers</button>
 </div>
