--- a/client/table.html
+++ b/client/table.html
@@ -1,5 +1,5 @@
 <div>
-  <div ui-grid="treeTable" ui-grid-edit ui-grid-cellnav ui-grid-selection ui-grid-exporter ui-grid-validate class="treeTable"></div>
+  <div ui-grid="treeTable" ui-grid-edit ui-grid-cellnav ui-grid-selection ui-grid-exporter ui-grid-validate ui-grid-pagination class="treeTable"></div>
   <p>Note: This table is for illustration purposes only. Edits will not persist after reloading.</p>
   <button ng-click="showDuplicates()" ng-if="!duplicates">Show Duplicate Site Numbers</button>
   <button ng-click="showAll()" ng-if="duplicates">Show All Site Numbers</button>
